AM-1634:  added the logging into drool rules & handle the authorisations.